--- a/compare.css
+++ b/compare.css
@@ -19,7 +19,6 @@ html {
 }
 .flex {
   display: flex;
-  /* align-items: center; */
 }
 a {
   text-decoration: none;
@@ -32,7 +31,10 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
+  position: relative;
+  background-color: #1f2328;
+  color: #fff;
 }
 /* navbar style */
 .navbar {
@@ -67,7 +69,6 @@ body {
   color: #fff;
   font-size: 2.5rem;
   cursor: pointer;
-  /* margin-right: 40px; */
 }
 
 .search-bar {
@@ -135,178 +136,90 @@ ul li:hover {
   cursor: pointer;
 }
 
-/*body Nav style*/
-.body-nav {
-  height: 70px;
-  width: 100vw;
-  gap: 10px;
-  border-bottom: 0.1px solid var(--lightGray);
-  align-items: end;
-  justify-content: center;
-  padding: 5px;
-  color: #1f2328;
-}
-.body-nav li {
-  gap: 5px;
-  font-size: 1.5rem;
+/* m*/
+.search-bar {
   height: 30px;
-  width: fit-content;
-  padding: 0 10px;
-  border-radius: 10px;
+  width: 300px;
+  border: 1px solid var(--gray);
+  border-radius: 5px;
+  justify-content: space-between;
   align-items: center;
-}
-.body-nav svg {
-  fill: #656d76;
-}
-.repo-num {
-  height: 20px;
-  width: 30px;
-  border-radius: 40%;
-  background-color: rgba(175, 184, 193, 0.2);
-  align-items: center;
-  justify-content: center;
-
-  font-size: 1.3rem;
-  font-weight: 700;
-}
-.body-nav li:hover {
-  background-color: #f0f2f4;
-  font-weight: 600;
-}
-/*main body style*/
-.main-body {
-  gap: 80px;
-}
-/*userprofile info*/
-.user-profile {
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: baseline;
-  gap: 10px;
-  margin-left: 15rem;
-}
-.user-profile-pic {
-  border-radius: 100%;
-  height: 35vmin;
-  width: 35vmin;
-  margin-top: -40px;
-  border: 2px solid #ced4da;
-}
-.user-username {
-  color: var(--gray);
-  font-size: 2rem;
-}
-.user-name {
-  font-size: 2.5rem;
-  font-weight: 600;
-}
-.edit-profile-btn {
-  width: 35vmin;
-  height: 3rem;
-  border-radius: 7px;
-  background-color: #f3f4f6;
-  border: 0.5px solid #d4d5d7;
+  padding: 15px 5px;
   cursor: pointer;
-  font-size: 1.3rem;
-  font-weight: 500;
+  gap: 8px;
+}
+.compare-input1,
+.compare-input2 {
+  height: 30px;
+  width: 220px;
+  background-color: inherit;
+  border: none;
+  outline: none;
+  color: #ffffff;
+}
+.search-input::placeholder {
+  color: #cdcdce;
   font-family: var(--font-Segoe);
 }
-.follow {
-  margin-left: 20px;
-}
-.follow svg {
-  margin-right: 10px;
-  fill: var(--gray);
-}
-.follow p {
-  color: #57606a;
+.search-icon {
+  color: var(--gray);
   font-size: 1.4rem;
 }
-.follow span {
+
+.main-compare {
+  margin-top: 5rem;
+  font-size: 2rem;
+  justify-content: center;
+  align-items: center;
+
+  gap: 5rem;
+}
+.compare-user {
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+.user-profile-pic-compare {
+  border-radius: 100%;
+  height: 25vmin;
+  width: 25vmin;
+  border: 2px solid #ced4da;
+}
+.compare {
   color: var(--black);
-  font-weight: 600;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: fit-content;
+  cursor: pointer;
+  background-color: #f0f2f4;
+  border-top: none;
+  border-left: none;
+  padding: 10px;
+  font-size: 2rem;
+  border-right: 1px solid #4c6793;
+  border-bottom: 1px solid #4c6793;
 }
-/*right side*/
-/*right-side-start*/
-.right-side {
-  margin-top: 4rem;
-}
-.right-side-items {
-  display: grid;
-  grid-template-rows: (1fr, repeat(3));
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
+.result1,
+.result2 {
+  height: 20vmin;
+  width: 30vmin;
+  display: none;
 }
 
-.repo-item {
-  padding: 1rem;
-  border: 1px solid rgba(128, 128, 128, 0.275);
-  border-radius: 0.5rem;
-  height: 12vmin;
-  width: 45vmin;
-  font-family: var(--font-Segoe);
-}
-.right-side-title {
-  text-align: start;
-  margin-bottom: 3rem;
-  font-size: 1.6rem;
-  font-weight: 400;
-  color: var(--gray);
-}
-.repo-language-color {
-  width: 12px;
-  height: 12px;
-  background-color: rgb(201, 23, 23);
-  border-radius: 50%;
-}
-.language-wrapper {
-  gap: 5px;
-  font-size: 1.2rem;
-  font-family: var(--font-Segoe);
-  margin-top: 2rem;
-  align-items: center;
-}
-.repo-header p {
-  padding: 0px 9px;
-  color: var(--gray);
-  border: 1px solid var(--lightGray);
-  border-radius: 40px;
-  height: 20px;
-  font-size: 1.2rem;
-  font-weight: 600;
-  align-items: center;
-}
-.repo-header h2 {
-  color: #0969da;
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-.repo-header h2:hover {
-  text-decoration: underline;
-}
-.repo-header {
-  justify-content: space-between;
-  font-family: var(--font-Segoe);
-}
-.repo-name:hover {
-  color: var(--link);
-  cursor: pointer;
-  text-decoration: underline;
-}
 /* footer style */
 footer {
   align-items: center;
   justify-content: center;
-  align-self: center;
   gap: 5rem;
-  margin-top: auto;
+  margin-top: 20rem;
   border-top: 1px solid var(--lightGray);
-  padding-top: 1.5rem;
-  height: 6rem;
-  width: 80%;
+  height: 5rem;
+  width: 100%;
 }
 .footer-logo {
-  color: var(--gray);
+  color: var(--btnColor);
 }
 .footer-logo-con {
   align-items: center;
@@ -314,20 +227,19 @@ footer {
 }
 .copyright {
   font-size: 1.2rem;
-  color: var(--gray);
+  color: var(--btnColor);
 }
 .footer-ul {
-  color: #0969da;
+  color: #abc4e0;
   font-family: var(--font-Segoe);
   gap: 4rem;
   font-size: 1.2rem;
 }
 .footer-ul li:hover {
-  color: #0969da;
+  color: #9cb5d1;
   text-decoration: underline;
 }
 
-/*right-side-end*/
 @media screen and (max-width: 1200px) {
   html {
     font-size: 9px;
@@ -379,12 +291,6 @@ footer {
   .navbar-rightside-icons {
     display: none;
   }
-  .body-nav {
-    gap: 0;
-  }
-  .main-body {
-    gap: 5rem;
-  }
   footer {
     padding-top: 10px;
     align-items: center;
@@ -393,43 +299,17 @@ footer {
     gap: 10px;
     justify-content: center;
   }
+  .user-profile {
+    flex-direction: row;
+  }
+  .main-compare {
+    flex-direction: column;
+    margin-bottom: 20rem;
+  }
 }
 @media screen and (max-width: 450px) {
   body {
     overflow-x: hidden;
-  }
-  .body-nav {
-    height: 40px;
-  }
-  .body-nav a {
-    display: none;
-  }
-  .search-bar {
-    width: 250px;
-  }
-  .main-body {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
-  .user-profile {
-    align-items: center;
-    margin-left: 0;
-  }
-  .user-profile-pic {
-    height: 30vmin;
-    width: 30vmin;
-  }
-  .right-side {
-    margin-top: 2rem;
-    margin-bottom: 20px;
-  }
-  .right-side-title {
-    margin-bottom: 10px;
-  }
-  .repo-item {
-    height: 17vmin;
   }
   footer {
     min-height: 20vh;
@@ -446,10 +326,6 @@ footer {
 @media screen and (max-width: 320px) {
   .search-bar {
     display: none;
-  }
-  .repo-item {
-    height: 25vmin;
-    width: 65vmin;
   }
 
   .footer-ul {
